--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- ver 20250322144840.1 -->
+<!-- ver 20250322150850.1 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,36 +7,48 @@
   <title>GreensboroBot</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-900 flex flex-col min-h-screen justify-center items-center p-6">
-  <main class="bg-white shadow-lg rounded-lg p-8 max-w-lg w-full">
-    <h1 class="text-3xl font-bold mb-4 text-center">Welcome to GreensboroBot</h1>
-    <p class="text-lg mb-6 text-center">Your local AI automation assistant.</p>
+<body class="bg-gray-50 text-gray-900 font-sans">
+  <header class="text-center py-12">
+    <img src="mascot.jpg" alt="GreensboroBot" class="w-40 mx-auto mb-6 rounded-full shadow-md">
+    <h1 class="text-4xl font-bold mb-2">GreensboroBot</h1>
+    <p class="text-lg text-gray-600">Your local AI-powered sidekick & creative collaborator</p>
+  </header>
 
-    <form name="contact" method="POST" data-netlify="true" class="space-y-4">
+  <section class="max-w-4xl mx-auto px-4 py-8">
+    <h2 class="text-2xl font-semibold mb-4 text-center">Featured AI Art</h2>
+    <div class="grid gap-6 md:grid-cols-2">
+      <img src="band.jpg" alt="AI Rock Band" class="rounded-lg shadow-md hover:scale-105 transition">
+      <img src="spooky.jpg" alt="Spooky Robot" class="rounded-lg shadow-md hover:scale-105 transition">
+    </div>
+  </section>
+
+  <section class="max-w-xl mx-auto px-4 py-12">
+    <h2 class="text-2xl font-semibold mb-4 text-center">Contact</h2>
+    <form name="contact" method="POST" data-netlify="true" class="space-y-4 bg-white p-6 rounded shadow">
       <input type="hidden" name="form-name" value="contact" />
-      
       <div>
-        <label class="block mb-1 font-medium">Name</label>
+        <label class="block font-medium">Name</label>
         <input name="name" required class="w-full p-2 border rounded" />
       </div>
       <div>
-        <label class="block mb-1 font-medium">Email</label>
+        <label class="block font-medium">Email</label>
         <input type="email" name="email" required class="w-full p-2 border rounded" />
       </div>
       <div>
-        <label class="block mb-1 font-medium">Message</label>
+        <label class="block font-medium">Message</label>
         <textarea name="message" rows="4" required class="w-full p-2 border rounded"></textarea>
       </div>
-
-      <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition">Send</button>
+      <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition">
+        Send
+      </button>
     </form>
-  </main>
 
-  <!-- Hidden dummy form for Netlify form detection -->
-  <form name="contact" netlify hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
+    <!-- Hidden fallback for Netlify detection -->
+    <form name="contact" netlify hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+  </section>
 </body>
 </html>
