--- a/community.html
+++ b/community.html
@@ -618,4 +618,4 @@
                         <p>Drop in for our weekly virtual office hours where you can ask questions and get help with your AI implementation challenges.</p>
                     </div>
                     <div class="card-footer">
-                      
+<script src="community.js"></script>                      
